--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <nav>
-        <div style="font-size: 2rem;padding: 1rem;">Dothraki talk</div>
+        <div style="font-size: 2rem;padding: 1rem;text-align: center;">Dothraki talk</div>
     </nav>
     <main>
         <textarea id="txt-input"
         placeholder="put your sentence in English here and we will convert it to Dothraki"></textarea>
         <button id="btn-translate">Translate</button>
 
-        <div style="font-size: larger;"> Output will come here 👇</div>
+        <div style="font-size: larger;color: white;"> Output will come here 👇</div>
         <div id="output"></div>
     </main>
     <footer>
